@@ -28,6 +28,9 @@ Release 2.0 (XXX XX, 2012)
   and/or signals.
 * Improved translation files, including javascript.
 * Fixed Django 1.4 support in the admin.
+* Renamed Node.get_database_engine() to Node.get_database_vendor(). As the name
+  implies, it returns the database vendor instead of the engine used. Treebeard
+  will get the value from Django, but you can subclass the method if needed.
 
 Release 1.61 (Jul 24, 2010)
 ---------------------------
